Adjusting bwc tests for backport